--- a/perfect_fetch/src/styles/Card.scss
+++ b/perfect_fetch/src/styles/Card.scss
@@ -6,12 +6,12 @@
     animation-fill-mode: forwards;
     width: 75%;
     height: 100%;
-    max-height: 275px;
+    max-height: 225px;
 
     .card-content{
-        width: 60%;
+        width: 55%;
         height: 100%;
-        max-height: 250px;
+        max-height: 225px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -49,16 +49,16 @@
 
     .card-container{
         margin: 0 auto;
-        width: 75%;
+        width: 65%;
         height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
     
         .card-content{
-            width: 65%;
+            width: 60%;
             height: 100%;
-            max-height: 300px;    
+            max-height: 265px;    
     
             .card-image{
                 height: 100%;
