--- a/perfect_fetch/src/styles/PawPrints.scss
+++ b/perfect_fetch/src/styles/PawPrints.scss
@@ -15,7 +15,10 @@
     padding: 2px;
 
     .paw{
-        padding: 2px;
+        padding: 2px 5px;
+        i{
+            font-size: 2.25rem;
+        }
     }
 
     .pawPrints-icons-primary{ 
