--- a/perfect_fetch/src/styles/RoundMarker.scss
+++ b/perfect_fetch/src/styles/RoundMarker.scss
@@ -103,12 +103,12 @@
 
 @keyframes bouncing{
     0%  { 
-            box-shadow: 0 0px 5px #47435098;
+            box-shadow: 0 0px 5px rgba(0,0,0,0.5);
         }
 
     100%{ 
 
-            box-shadow: 0 40px 40px #47435023;
+            box-shadow: 0 45px 45px rgba(0,0,0,0.1);
     }
 
   }
