--- a/perfect_fetch/src/styles/Rules.scss
+++ b/perfect_fetch/src/styles/Rules.scss
@@ -143,17 +143,17 @@
 
 @media screen and (min-width: 375px){
     .rules-container{
-        max-height: 530px;
+        max-height: 510px;
     }
     
     .rules-container-exit{
-        max-height: 530px;
+        max-height: 510px;
     }
     
     .rules-title{
         max-height: 165px;
         h2{
-            font-size: 3rem;
+            font-size: 2rem;
         }    
     }
     
